# snap_fit

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_POST_CREATE.md  docker-compose.yml  pyproject.toml  roadmap.md  ruff.toml
.github/: copilot-instructions.md
.github/agents/: dev-agent.md  dev-implementation-agent.md  dev-plan-agent.md  dev-prototype-agent.md  docs-agent.md  meta-agent.md  test-agent.md
.github/prompts/: docs-ingest.prompt.md  docs-lint.prompt.md
data/configs_sample/: config_puzzle_v1.json  config_puzzle_v2.json
docs/: README.md  fastapi.md  getting_started.md  index.md  log.md
docs/guides/: coordinate_spaces.md  fastapi.md  getting_started.md  green_background.md  update_docs.md
docs/roadmap/: roadmap.md
pipelines/: README.md  backlog.md  generate_board.ipynb  ingest_sheet.ipynb
scratch_space/00_feature_sample/: 01_sample.ipynb
scratch_space/20_piece_markers/: 00_sample.ipynb  00_sheet_identity_plan.md  01_print_read_board.ipynb  01_status_tracker.md  02_sheet_metadata_model.md  03_qr_chunk_handler.md  04_metadata_zone_config.md  05_slot_grid.md  06_sheet_metadata_codec.md  07_board_image_composer.md  08_contour_centroid.md  09_sheet_integration.md  10_pyproject_dependency.md  11_circular_imports.md  12_dim_debug_output.txt  12_dimension_check.md  13_pipelines_cleanup.md  14_marked_board_sample.md  15_move_slot_labels.md  16_sheet_cropping.md  16_support.py  17_ui_align.md  99_sheet_identity_brainstorm.md
scratch_space/21_ui_solver/: 00_ui_solver.md  01_status_tracker.md  02_dataset_selector.md  03.1_image_crop_fix.md  03_piece_image_endpoint.md  04_session_crud.md  05_suggestion_engine.md  06_run_matching.md  07_viz_primitives.md  08_solver_ui_templates.md  09_orientation_debug.md  10_ui_notes.md  11_placed_piece_labels.md  16_piece_edit.md  (+5 more)
scripts/: check_pipeline_imports.py
(+235 files in other folders)
