[tool.poetry]
name = "snap-fit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "snap_fit", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
loguru = "^0.7.2"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
nbformat = "^5.10.4"
rich = "^13.9.4"
tqdm = "^4.67.1"
opencv-python = "^4.10.0.84"
opencv-contrib-python = "^4.10.0.84"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_sort_within_sections = true
multi_line_output = 3
