[project]
name = "snap-fit"
version = "0.1.0"
description = "Fit puzzle pieces."
readme = "README.md"
requires-python = "==3.14.*"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "loguru>=0.7.2",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "opencv-contrib-python>=4.10.0.84",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "notebook" },
]
test = [
    "pytest>=8.3.3",
]
lint = [
    "ruff>=0.9.6",
    "pre-commit>=4.1.0",
    "detect-secrets>=1.5.0",
    "pyright[nodejs]>=1.1.407",
]
notebook = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nbformat>=5.10.4",
    "nbstripout>=0.8.2",
    "rich>=13.9.4",
    "tqdm>=4.67.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
# remember to adjust include paths as needed (eg scripts folder)
include = ["src", "tests"]
